Updated scss, added material module and home content

--- a/angular-web-app/angular.json
+++ b/angular-web-app/angular.json
@@ -28,9 +28,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/spavento-theme.scss"
+              "src/spavento-theme.scss",
+              "src/styles.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
