--- a/angular-web-app/package.json
+++ b/angular-web-app/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "@ngu/carousel": "^2.0.3",
     "@types/jquery": "^3.5.0",
     "bootstrap": "^4.5.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
