--- a/angular-web-app/package.json
+++ b/angular-web-app/package.json
@@ -22,11 +22,12 @@
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "@ngu/carousel": "^2.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "@ngu/carousel": "^3.0.1",
     "bootstrap": "^4.5.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.5",
+    "shufflejs": "^5.2.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
