--- a/angular-web-app/package.json
+++ b/angular-web-app/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.0",
     "rxjs": "~6.6.3",
     "shufflejs": "^5.2.3",
+    "simplebar-angular": "^2.3.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.10.3"
   },
