--- a/angular-web-app/package.json
+++ b/angular-web-app/package.json
@@ -11,18 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.7",
-    "@angular/cdk": "^11.0.3",
-    "@angular/common": "~11.0.7",
-    "@angular/compiler": "~11.0.7",
-    "@angular/core": "~11.0.7",
-    "@angular/forms": "~11.0.7",
-    "@angular/localize": "~11.0.7",
-    "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "~11.0.7",
-    "@angular/platform-browser-dynamic": "~11.0.7",
-    "@angular/router": "~11.0.7",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.1",
+    "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.0.4",
+    "@angular/common": "^11.0.9",
+    "@angular/compiler": "^11.0.9",
+    "@angular/core": "^11.0.9",
+    "@angular/forms": "^11.0.9",
+    "@angular/localize": "^11.0.9",
+    "@angular/material": "^11.0.4",
+    "@angular/platform-browser": "^11.0.9",
+    "@angular/platform-browser-dynamic": "^11.0.9",
+    "@angular/router": "^11.0.9",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.2",
     "bootstrap": "^4.5.0",
     "rxjs": "~6.6.3",
     "shufflejs": "^5.2.3",
@@ -31,12 +31,12 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.6",
-    "@angular/cli": "~11.0.6",
-    "@angular/compiler-cli": "~11.0.7",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular/cli": "^11.0.7",
+    "@angular/compiler-cli": "^11.0.9",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.19.12",
+    "@types/node": "^12.19.14",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
