--- a/angular-web-app/package.json
+++ b/angular-web-app/package.json
@@ -22,8 +22,8 @@
     "@angular/platform-browser": "^11.2.2",
     "@angular/platform-browser-dynamic": "^11.2.2",
     "@angular/router": "^11.2.2",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.2",
-    "bootstrap": "^4.5.0",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "bootstrap": "^4.6.0",
     "rxjs": "~6.6.3",
     "shufflejs": "^5.2.3",
     "simplebar-angular": "^2.3.0",
@@ -34,9 +34,9 @@
     "@angular-devkit/build-angular": "^0.1102.1",
     "@angular/cli": "^11.2.1",
     "@angular/compiler-cli": "^11.2.2",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "^3.6.4",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.19.14",
+    "@types/node": "^12.20.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -48,6 +48,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5"
+    "typescript": "^4.1.5"
   }
 }
