--- a/angular-web-app/package.json
+++ b/angular-web-app/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^11.2.2",
     "@angular/compiler": "^11.2.2",
     "@angular/core": "^11.2.2",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "^11.2.2",
     "@angular/localize": "^11.2.2",
     "@angular/material": "^11.2.1",
@@ -24,6 +25,8 @@
     "@angular/router": "^11.2.2",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.2.9",
+    "ngx-dropzone": "^3.0.0",
     "rxjs": "~6.6.3",
     "shufflejs": "^5.2.3",
     "simplebar-angular": "^2.3.0",
