added sweet alerts

--- a/angular-web-app/package.json
+++ b/angular-web-app/package.json
@@ -24,12 +24,15 @@
     "@angular/platform-browser-dynamic": "^11.2.2",
     "@angular/router": "^11.2.2",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "@sweetalert2/ngx-sweetalert2": "^9.0.0",
+    "@sweetalert2/themes": "^4.0.3",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.9",
     "ngx-dropzone": "^3.0.0",
     "rxjs": "~6.6.3",
     "shufflejs": "^5.2.3",
     "simplebar-angular": "^2.3.0",
+    "sweetalert2": "^10.15.5",
     "tslib": "^2.1.0",
     "zone.js": "~0.10.3"
   },
