--- a/angular-web-app/angular.json
+++ b/angular-web-app/angular.json
@@ -29,7 +29,8 @@
             ],
             "styles": [
               "src/spavento-theme.scss",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/animate.css/animate.min.css"
             ],
             "scripts": [
             ]
