--- a/angular-web-app/package.json
+++ b/angular-web-app/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@sweetalert2/ngx-sweetalert2": "^9.0.0",
     "@sweetalert2/themes": "^4.0.3",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.9",
     "ngx-dropzone": "^3.0.0",
