--- a/angular-web-app/package.json
+++ b/angular-web-app/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.9",
     "ngx-dropzone": "^3.0.0",
+    "ngx-editor": "^8.1.0",
     "rxjs": "~6.6.3",
     "sweetalert2": "^10.15.5",
     "tslib": "^2.1.0",
