--- a/angular-web-app/package.json
+++ b/angular-web-app/package.json
@@ -11,42 +11,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.2",
-    "@angular/cdk": "^11.2.1",
-    "@angular/common": "^11.2.2",
-    "@angular/compiler": "^11.2.2",
-    "@angular/core": "^11.2.2",
+    "@angular/animations": "^11.2.6",
+    "@angular/cdk": "^11.2.5",
+    "@angular/common": "^11.2.6",
+    "@angular/compiler": "^11.2.6",
+    "@angular/core": "^11.2.6",
     "@angular/fire": "^6.1.4",
-    "@angular/forms": "^11.2.2",
-    "@angular/localize": "^11.2.2",
-    "@angular/material": "^11.2.1",
-    "@angular/platform-browser": "^11.2.2",
-    "@angular/platform-browser-dynamic": "^11.2.2",
-    "@angular/router": "^11.2.2",
+    "@angular/forms": "^11.2.6",
+    "@angular/localize": "^11.2.6",
+    "@angular/material": "^11.2.5",
+    "@angular/platform-browser": "^11.2.6",
+    "@angular/platform-browser-dynamic": "^11.2.6",
+    "@angular/router": "^11.2.6",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@sweetalert2/ngx-sweetalert2": "^9.0.0",
     "@sweetalert2/themes": "^4.0.3",
     "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
-    "firebase": "^8.2.9",
+    "firebase": "^8.3.1",
     "ngx-dropzone": "^3.0.0",
     "ngx-editor": "^8.1.0",
-    "rxjs": "~6.6.3",
-    "sweetalert2": "^10.15.5",
+    "rxjs": "^6.6.6",
+    "sweetalert2": "^10.15.6",
     "tslib": "^2.1.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.1",
-    "@angular/cli": "^11.2.1",
-    "@angular/compiler-cli": "^11.2.2",
-    "@types/jasmine": "^3.6.4",
+    "@angular-devkit/build-angular": "^0.1102.5",
+    "@angular/cli": "^11.2.5",
+    "@angular/compiler-cli": "^11.2.6",
+    "@types/jasmine": "^3.6.7",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.20.4",
+    "@types/node": "^12.20.6",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.1",
+    "karma": "^6.1.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -54,6 +54,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.1.5"
+    "typescript": "^4.2.3"
   }
 }
