--- a/angular-web-app/firebase.json
+++ b/angular-web-app/firebase.json
@@ -4,7 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "dist",
+    "public": "dist/angular-web-app",
     "ignore": [
       "firebase.json",
       "**/.*",
