--- a/angular-web-app/package.json
+++ b/angular-web-app/package.json
@@ -32,6 +32,7 @@
     "ngx-dropzone": "^3.0.0",
     "ngx-editor": "^8.1.0",
     "rxjs": "^6.6.6",
+    "shufflejs": "^5.3.0",
     "sweetalert2": "^10.15.6",
     "tslib": "^2.1.0",
     "zone.js": "~0.10.3"
